configured the routes file for order creating checking heakth status and basically the backbone , also configure the gateway yaml to map every return response accordingly to check the status
